@@ -1,3 +1,10 @@
-Switched Selinux Permissive to Enforcing Selinux
+Use EVA GCC 12 instead to use Clang 9
+Limit Screen Recording To 60Fps
+Increased 5GHz Network Signal tolerance 
+Enabled MTK neural networks HAL
+Building libtextclassifier from source
+Added missing MTK Neural Networks blobs
+Imported MTK APU blobs from begonia 11 RP1A.200720.011
+Updated apn configs from RP1A.200720.011
 Upstreamed NextKernel
-Explicitly enable iorap
+Added GcamGO
